# yapyap

./: .gitignore  LICENSE  README.md  pyproject.toml
src/yapyap/: __main__.py  keyboard.py  model.py  parakeet_model.py  whisper_model.py  yapyap.py
